# lrose-core

./: .gitignore  CMakeLists.txt  DOWNLOAD.md  LICENSE.txt  README.md
codebase/: CMakeLists.txt
codebase/RELEASE_NOTES/: titan_release_notes.20180117
codebase/apps/: CMakeLists.txt  Makefile  __makefile.template
codebase/apps/CVS/: Entries
codebase/apps/Radx/: CMakeLists.txt  __makefile.template
codebase/apps/_makefiles/: Makefile.cip  Makefile.cip_deployed  Makefile.cipak  Makefile.fip  Makefile.fip_deployed  Makefile.fip_plot  Makefile.fip_test_harness  Makefile.fipak  Makefile.ipa  Makefile.micro  Makefile.nirss  Makefile.tcip  makefile.AKRadarIngest  makefile.CIDD  makefile.CoSPA  makefile.CoSPA_Ops  makefile.CoSPA_TechTransferTest  makefile.CoSPA_for_mitll  makefile.ConvWx_Ops  makefile.ConvWx_full_code_nonrelease  makefile.ConvWx_full_code_release  makefile.Dcit  makefile.DsService  makefile.EPOCH_Ops  makefile.HWT  makefile.IHL  makefile.InsituTurb  makefile.MCS_ConvInit  makefile.NiwotBeijing  makefile.NiwotCospa  makefile.RADIA_NSSL  makefile.REPoH  makefile.RadIA  makefile.SPIPA  makefile.Thor  makefile.Thor2005  makefile.TurbRemoteSensing  makefile.Windshear  makefile.adds  makefile.adjoint  (+76 more)
codebase/apps/awc/: CMakeLists.txt
codebase/apps/cidd/: CMakeLists.txt  Makefile  __makefile.template
codebase/apps/didss/: CMakeLists.txt
codebase/apps/dsserver/: CMakeLists.txt
codebase/apps/filters/: CMakeLists.txt  Makefile
codebase/apps/hydro/: CMakeLists.txt  Makefile  __makefile.template
codebase/apps/ingest/: CMakeLists.txt
codebase/apps/interp/: CMakeLists.txt
codebase/apps/mdv_utils/: CMakeLists.txt
codebase/apps/mm5/: Makefile
codebase/apps/physics/: CMakeLists.txt  Makefile
codebase/apps/procmap/: CMakeLists.txt
codebase/apps/radar/: CMakeLists.txt
codebase/apps/refractt/: CMakeLists.txt
codebase/apps/satApps/: CMakeLists.txt  Makefile  __makefile.template
codebase/apps/scripts/: CMakeLists.txt  Makefile  __makefile.template  gfs_drive.pl  gfs_grb2mdv.pl  grib2_receive.pl  gribfile_receive.pl
codebase/apps/spdb_server/: README
codebase/apps/spdb_utils/: CMakeLists.txt
codebase/apps/spol/: CMakeLists.txt
codebase/apps/tdrp/: CMakeLists.txt  Makefile  __makefile.template
codebase/apps/titan/: CMakeLists.txt  Makefile
codebase/apps/trec/: CMakeLists.txt
codebase/apps/xpol/: CMakeLists.txt
codebase/cmake/: FindUDUnits.cmake
codebase/compat/win32/: strcasestr.h
codebase/distribs/: JADE_bootstrap  env_settings  env_setup
codebase/distribs/CVS/: Entries  Repository
codebase/distribs/lrose/: .cvsignore  build_lrose  build_netcdf  check_apps  check_build  check_libs  do_src_checkout  rsync_release_to_ftp
codebase/libs/: CMakeLists.txt  Makefile  __makefile.template  makefile
codebase/libs/CVS/: Entries
codebase/libs/FiltAlg/: CMakeLists.txt
codebase/libs/FiltAlgVirtVol/: CMakeLists.txt
codebase/libs/Fmq/: CMakeLists.txt  Makefile
codebase/libs/Mdv/: CMakeLists.txt  Makefile  __makefile.template
codebase/libs/Ncxx/: CMakeLists.txt
codebase/libs/Radx/: CMakeLists.txt  Makefile  README  configure.ac  doxygen.conf  install-sh  prepare_release  run_autoconf
codebase/libs/Refract/: CMakeLists.txt  Makefile
codebase/libs/Solo/: CMakeLists.txt
codebase/libs/Spdb/: CMakeLists.txt  Makefile
codebase/libs/_makefiles/: makefile.apar  makefile.bom  makefile.bom_titan  makefile.cidd  makefile.hcr  makefile.hsrl  makefile.lrose  makefile.lrose-blaze  makefile.lrose-cidd  makefile.lrose-core  makefile.lrose-cyclone  makefile.lrose-radx  makefile.radx  makefile.samurai  makefile.titan
codebase/libs/advect/: CMakeLists.txt  Makefile  __makefile.template
codebase/libs/apiMdv/: Makefile
codebase/libs/cidd/: CMakeLists.txt
codebase/libs/contour/: CMakeLists.txt  Makefile  __makefile.template
codebase/make_bin/: Makefile  check_apps.py  check_apps.py3  check_libs.pl  check_libs.py  check_libs.py3  createConfigure.am.py  createConfigure.am.py3  createMakefile.am.app.blaze.py  createMakefile.am.app.cidd.py  createMakefile.am.app.hcr.py  createMakefile.am.app.hsrl.py  createMakefile.am.app.lrose-blaze.py  createMakefile.am.app.lrose-blaze.py3  createMakefile.am.app.lrose-blaze.save.py  createMakefile.am.app.lrose-cidd.py  createMakefile.am.app.lrose-core.py  createMakefile.am.app.lrose-core.py3  createMakefile.am.app.lrose.py  createMakefile.am.app.lrose.py3  createMakefile.am.app.py  createMakefile.am.app.radx.py  createMakefile.am.app.shared.py  createMakefile.am.app.titan.py  createMakefile.am.lib.py  createMakefile.am.lib.py3  createMakefile.am.recurse.py  createMakefile.am.recurse.py3  createMakefile.am.topdir.py  createMakefile.am.topdir.py3  createPkgConfig.py  fixConfigure.py  installOriginLibFiles.py  installOriginLibFiles.py3  installOriginLroseLibs.py  installPackageMakefiles.py  install_build_env  install_distro_makefiles.py  install_package_makefiles.osx.py  install_package_makefiles.py  (+9 more)
codebase/make_include/: bsd_copyright.txt  rap_make.APPLE_OSX  rap_make.ATEC  rap_make.ATEC_64  rap_make.ATEC_64_32MODE  rap_make.CIDD_32  rap_make.DARWIN  rap_make.DARWIN.backup  rap_make.DARWIN_32  rap_make.DARWIN_32MODE  rap_make.LINUX  rap_make.LINUX_64  rap_make.LINUX_64_CIDD32  rap_make.LINUX_64_LOCAL_NETCDF  rap_make.LINUX_64_squeeze  rap_make.LINUX_64_stretch  rap_make.LINUX_64_wheezy  rap_make.LINUX_ALPHA  rap_make.LINUX_ARM  rap_make.LINUX_CX11  rap_make.LINUX_CX14  rap_make.LINUX_LROSE  rap_make.LINUX_NCXX  rap_make.LINUX_QT5  rap_make.LINUX_etch  rap_make.NNT  rap_make.OSX  rap_make.OSX_LROSE  rap_make.RHEL5_64  rap_make.RHEL5_64_32MODE  rap_make.SUNOS5  rap_make.WCOSS  rap_make_c++_targets  rap_make_cf_bin_targets  rap_make_enum_to_string_targets  rap_make_java_targets  rap_make_lex_targets  rap_make_lib_targets  rap_make_macros_no_host_os  rap_make_matlab_targets  (+13 more)
codebase/release/: create_lrose_release  create_release  install_bin_release  install_src_release  prepare_bin_release  prepare_bin_release.cidd  prepare_bin_release.lrose  prepare_bin_release.radx  prepare_src_release
(+29526 files in other folders)
