###############################################################
#
# Top-level CMakeLists file for lrose-core
#
# dir: lrose-core
#
# written by script createCMakeLists.py
#
###############################################################

cmake_minimum_required(VERSION 3.7)

project (lrose-core)

add_subdirectory(codebase)

