###############################################################
#
# CMakeLists for cmake recursion
#
# dir: lrose-core/codebase/apps
#
# written by script createCMakeLists.py
#
###############################################################

project (LROSE-CORE)

# subdirectories

add_subdirectory (tdrp)
add_subdirectory (scripts)
add_subdirectory (procmap)
add_subdirectory (titan)
add_subdirectory (trec)
add_subdirectory (didss)
add_subdirectory (ingest)
add_subdirectory (dsserver)
add_subdirectory (mdv_utils)
add_subdirectory (physics)
add_subdirectory (satApps)
add_subdirectory (spdb_utils)
add_subdirectory (filters)
add_subdirectory (awc)
add_subdirectory (hydro)
add_subdirectory (interp)
add_subdirectory (radar)
add_subdirectory (refractt)
add_subdirectory (Radx)
add_subdirectory (cidd)
add_subdirectory (spol)
add_subdirectory (xpol)

