###############################################################
#
# CMakeLists for cmake recursion
#
# dir: lrose-core/codebase/libs
#
# written by script createCMakeLists.py
#
###############################################################

project (LROSE-CORE)

# subdirectories

add_subdirectory (FiltAlg)
add_subdirectory (FiltAlgVirtVol)
add_subdirectory (Fmq)
add_subdirectory (Mdv)
add_subdirectory (Ncxx)
add_subdirectory (Radx)
add_subdirectory (Refract)
add_subdirectory (Solo)
add_subdirectory (Spdb)
add_subdirectory (advect)
add_subdirectory (cidd)
add_subdirectory (contour)
add_subdirectory (dataport)
add_subdirectory (didss)
add_subdirectory (dsdata)
add_subdirectory (dsserver)
add_subdirectory (euclid)
add_subdirectory (grib)
add_subdirectory (grib2)
add_subdirectory (hydro)
add_subdirectory (kd)
add_subdirectory (physics)
add_subdirectory (qtplot)
add_subdirectory (radar)
add_subdirectory (rapformats)
add_subdirectory (rapmath)
add_subdirectory (rapplot)
add_subdirectory (shapelib)
add_subdirectory (tdrp)
add_subdirectory (titan)
add_subdirectory (toolsa)

