###############################################
#
# CMakeLists for cmake recursion
#
# dir: /home/dixon/git/lrose-core/codebase/apps/didss
#
# written by script createCMakeLists.py
#
# created 2021-02-12 14:00:33.092373
#
###############################################

project (LROSE-CORE)

# subdirectories

add_subdirectory (src)

