###############################################
#
# CMakeLists for cmake recursion
#
# dir: /home/dixon/git/lrose-core/codebase/apps/dsserver
#
# written by script createCMakeLists.py
#
# created 2021-02-12 14:00:33.159947
#
###############################################

project (LROSE-CORE)

# subdirectories

add_subdirectory (src)

