###############################################
#
# CMakeLists for cmake recursion
#
# dir: /home/dixon/git/lrose-core/codebase/apps/mdv_utils
#
# written by script createCMakeLists.py
#
###############################################

project (LROSE-CORE)

# subdirectories

add_subdirectory (src)

