###############################################################
#
# CMakeLists for cmake recursion
#
# dir: lrose-core/codebase/apps/radar
#
# written by script createCMakeLists.py
#
###############################################################

project (LROSE-CORE)

# subdirectories

add_subdirectory (src)

