###############################################
#
# CMakeLists for cmake recursion
#
# dir: /home/dixon/git/lrose-core/codebase/apps/scripts
#
# written by script createCMakeLists.py
#
# created 2021-02-12 14:00:33.043649
#
###############################################

project (LROSE-CORE)

# subdirectories

add_subdirectory (src)

