###############################################################
#
# CMakeLists for cmake recursion
#
# dir: lrose-core/codebase/apps/spdb_utils
#
# written by script createCMakeLists.py
#
###############################################################

project (LROSE-CORE)

# subdirectories

add_subdirectory (src)

