###############################################################
#
# CMakeLists for cmake recursion
#
# dir: lrose-core/codebase/apps/titan
#
# written by script createCMakeLists.py
#
###############################################################

project (lrose-core)

# subdirectories

add_subdirectory (src)

