###############################################################
#
# CMakeLists for cmake recursion
#
# dir: lrose-core/codebase/apps/xpol
#
# written by script createCMakeLists.py
#
###############################################################

project (lrose-core)

# subdirectories

add_subdirectory (src)

