###############################################################
#
# CMakeLists for cmake recursion
#
# dir: lrose-core/codebase/libs/FiltAlg
#
# written by script createCMakeLists.py
#
###############################################################

project (LROSE-CORE)

# subdirectories

add_subdirectory (src)

