###############################################
#
# CMakeLists for cmake recursion
#
# dir: /data/mdtest/git/lrose-core/codebase/libs/FiltAlgVirtVol
#
# written by script createCMakeLists.py
#
###############################################

project (LROSE-CORE)

# subdirectories

add_subdirectory (src)

