###############################################################
#
# CMakeLists for cmake recursion
#
# dir: lrose-core/codebase/libs/FiltAlgVirtVol
#
# written by script createCMakeLists.py
#
###############################################################

project (LROSE-CORE)

# subdirectories

add_subdirectory (src)

