###############################################
#
# CMakeLists for cmake recursion
#
# dir: /home/dixon/git/lrose-core/codebase/libs/Mdv
#
# written by script createCMakeLists.py
#
# created 2021-02-12 14:00:32.961337
#
###############################################

project (LROSE-CORE)

# subdirectories

add_subdirectory (src)

