###############################################################
#
# CMakeLists for cmake recursion
#
# dir: lrose-core/codebase/libs/Mdv
#
# written by script createCMakeLists.py
#
###############################################################

project (LROSE-CORE)

# subdirectories

add_subdirectory (src)

