###############################################################
#
# CMakeLists for cmake recursion
#
# dir: lrose-core/codebase/libs/Radx
#
# written by script createCMakeLists.py
#
###############################################################

project (lrose-core)

# subdirectories

add_subdirectory (src)

